test/parser/good/no_text.ulm
.data
a: .string "hello"

; no text section