test/parser/bad/bad_escape_sequences.ulm
.text
    nop

.data
a: .string "bad \5 sequence"